src/objects/Partial_Signup__c.object
<CustomObject>
    <description>To store incomplete signup form entries</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eway_Amount__c</fullName>
        <label>Eway Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_Up__c</fullName>
        <label>Sign Up</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accounttype__c</fullName>
        <label>accounttype</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adwordsclientid__c</fullName>
        <label>adwordsclientid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adwordsemail__c</fullName>
        <label>adwordsemail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adwordspassword__c</fullName>
        <label>adwordspassword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affiliate_id__c</fullName>
        <label>affiliate_id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affiliate_name__c</fullName>
        <label>affiliate_name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>browser__c</fullName>
        <label>browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company__c</fullName>
        <label>company</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <label>contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>firstname__c</fullName>
        <label>firstname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>form__c</fullName>
        <label>form</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>industry__c</fullName>
        <label>industry</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoice_no__c</fullName>
        <label>invoice_no</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ip__c</fullName>
        <label>ip</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEwayPaid__c</fullName>
        <defaultValue>&apos;false&apos;</defaultValue>
        <label>isEwayPaid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastname__c</fullName>
        <label>lastname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobile__c</fullName>
        <label>mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>package__c</fullName>
        <label>package</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>platform__c</fullName>
        <label>platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>processed_eway__c</fullName>
        <label>processed_eway</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>promocode__c</fullName>
        <label>promocode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>receipt_no__c</fullName>
        <label>receipt_no</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>session_id__c</fullName>
        <label>session_id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>signup_date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>signup_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>user_agent__c</fullName>
        <label>user_agent</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>user_id__c</fullName>
        <label>user_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>webaddress__c</fullName>
        <label>webaddress</label>
        <type>Url</type>
    </fields>
    <label>Partial Signup</label>
    <nameField>
        <label>Partial Signups Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partial Signups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>